infrastructure/cdk.out/localstack.template.json
{
 "Resources": {
  "ClynicVPC59C07BC0": {
   "Type": "AWS::EC2::VPC",
   "Properties": {
    "CidrBlock": "10.0.0.0/16",
    "EnableDnsHostnames": true,
    "EnableDnsSupport": true,
    "InstanceTenancy": "default",
    "Tags": [
     {
      "Key": "Name",
      "Value": "ClynicVPC"
     }
    ]
   }
  },
  "ClynicVPCPublicSubnet1SubnetB6FCDF2D": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": {
     "Fn::Select": [
      0,
      {
       "Fn::GetAZs": ""
      }
     ]
    },
    "CidrBlock": "10.0.0.0/18",
    "MapPublicIpOnLaunch": true,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "Public"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Public"
     },
     {
      "Key": "Name",
      "Value": "localstack/ClynicVPC/PublicSubnet1"
     }
    ],
    "VpcId": {
     "Ref": "ClynicVPC59C07BC0"
    }
   }
  },
  "ClynicVPCPublicSubnet1RouteTable9C640139": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "localstack/ClynicVPC/PublicSubnet1"
     }
    ],
    "VpcId": {
     "Ref": "ClynicVPC59C07BC0"
    }
   }
  },
  "ClynicVPCPublicSubnet1RouteTableAssociationB121591F": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "ClynicVPCPublicSubnet1RouteTable9C640139"
    },
    "SubnetId": {
     "Ref": "ClynicVPCPublicSubnet1SubnetB6FCDF2D"
    }
   }
  },
  "ClynicVPCPublicSubnet1DefaultRouteA2DADBF6": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "GatewayId": {
     "Ref": "ClynicVPCIGW3C687119"
    },
    "RouteTableId": {
     "Ref": "ClynicVPCPublicSubnet1RouteTable9C640139"
    }
   },
   "DependsOn": [
    "ClynicVPCVPCGW20816574"
   ]
  },
  "ClynicVPCPublicSubnet1EIP86EF5147": {
   "Type": "AWS::EC2::EIP",
   "Properties": {
    "Domain": "vpc",
    "Tags": [
     {
      "Key": "Name",
      "Value": "localstack/ClynicVPC/PublicSubnet1"
     }
    ]
   }
  },
  "ClynicVPCPublicSubnet1NATGateway878068EA": {
   "Type": "AWS::EC2::NatGateway",
   "Properties": {
    "AllocationId": {
     "Fn::GetAtt": [
      "ClynicVPCPublicSubnet1EIP86EF5147",
      "AllocationId"
     ]
    },
    "SubnetId": {
     "Ref": "ClynicVPCPublicSubnet1SubnetB6FCDF2D"
    },
    "Tags": [
     {
      "Key": "Name",
      "Value": "localstack/ClynicVPC/PublicSubnet1"
     }
    ]
   },
   "DependsOn": [
    "ClynicVPCPublicSubnet1DefaultRouteA2DADBF6",
    "ClynicVPCPublicSubnet1RouteTableAssociationB121591F"
   ]
  },
  "ClynicVPCPublicSubnet2Subnet78C3FE18": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": {
     "Fn::Select": [
      1,
      {
       "Fn::GetAZs": ""
      }
     ]
    },
    "CidrBlock": "10.0.64.0/18",
    "MapPublicIpOnLaunch": true,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "Public"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Public"
     },
     {
      "Key": "Name",
      "Value": "localstack/ClynicVPC/PublicSubnet2"
     }
    ],
    "VpcId": {
     "Ref": "ClynicVPC59C07BC0"
    }
   }
  },
  "ClynicVPCPublicSubnet2RouteTableDE45350E": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "localstack/ClynicVPC/PublicSubnet2"
     }
    ],
    "VpcId": {
     "Ref": "ClynicVPC59C07BC0"
    }
   }
  },
  "ClynicVPCPublicSubnet2RouteTableAssociation57C9C32D": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "ClynicVPCPublicSubnet2RouteTableDE45350E"
    },
    "SubnetId": {
     "Ref": "ClynicVPCPublicSubnet2Subnet78C3FE18"
    }
   }
  },
  "ClynicVPCPublicSubnet2DefaultRouteBCF326A3": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "GatewayId": {
     "Ref": "ClynicVPCIGW3C687119"
    },
    "RouteTableId": {
     "Ref": "ClynicVPCPublicSubnet2RouteTableDE45350E"
    }
   },
   "DependsOn": [
    "ClynicVPCVPCGW20816574"
   ]
  },
  "ClynicVPCPublicSubnet2EIPE01C4B46": {
   "Type": "AWS::EC2::EIP",
   "Properties": {
    "Domain": "vpc",
    "Tags": [
     {
      "Key": "Name",
      "Value": "localstack/ClynicVPC/PublicSubnet2"
     }
    ]
   }
  },
  "ClynicVPCPublicSubnet2NATGateway4BCE9852": {
   "Type": "AWS::EC2::NatGateway",
   "Properties": {
    "AllocationId": {
     "Fn::GetAtt": [
      "ClynicVPCPublicSubnet2EIPE01C4B46",
      "AllocationId"
     ]
    },
    "SubnetId": {
     "Ref": "ClynicVPCPublicSubnet2Subnet78C3FE18"
    },
    "Tags": [
     {
      "Key": "Name",
      "Value": "localstack/ClynicVPC/PublicSubnet2"
     }
    ]
   },
   "DependsOn": [
    "ClynicVPCPublicSubnet2DefaultRouteBCF326A3",
    "ClynicVPCPublicSubnet2RouteTableAssociation57C9C32D"
   ]
  },
  "ClynicVPCPrivateSubnet1Subnet15B26298": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": {
     "Fn::Select": [
      0,
      {
       "Fn::GetAZs": ""
      }
     ]
    },
    "CidrBlock": "10.0.128.0/18",
    "MapPublicIpOnLaunch": false,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "Private"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Private"
     },
     {
      "Key": "Name",
      "Value": "localstack/ClynicVPC/PrivateSubnet1"
     }
    ],
    "VpcId": {
     "Ref": "ClynicVPC59C07BC0"
    }
   }
  },
  "ClynicVPCPrivateSubnet1RouteTableF15BE04D": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "localstack/ClynicVPC/PrivateSubnet1"
     }
    ],
    "VpcId": {
     "Ref": "ClynicVPC59C07BC0"
    }
   }
  },
  "ClynicVPCPrivateSubnet1RouteTableAssociation8B87D9E4": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "ClynicVPCPrivateSubnet1RouteTableF15BE04D"
    },
    "SubnetId": {
     "Ref": "ClynicVPCPrivateSubnet1Subnet15B26298"
    }
   }
  },
  "ClynicVPCPrivateSubnet1DefaultRouteC871089F": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "NatGatewayId": {
     "Ref": "ClynicVPCPublicSubnet1NATGateway878068EA"
    },
    "RouteTableId": {
     "Ref": "ClynicVPCPrivateSubnet1RouteTableF15BE04D"
    }
   }
  },
  "ClynicVPCPrivateSubnet2SubnetE10A628E": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": {
     "Fn::Select": [
      1,
      {
       "Fn::GetAZs": ""
      }
     ]
    },
    "CidrBlock": "10.0.192.0/18",
    "MapPublicIpOnLaunch": false,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "Private"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Private"
     },
     {
      "Key": "Name",
      "Value": "localstack/ClynicVPC/PrivateSubnet2"
     }
    ],
    "VpcId": {
     "Ref": "ClynicVPC59C07BC0"
    }
   }
  },
  "ClynicVPCPrivateSubnet2RouteTableF6C39631": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "localstack/ClynicVPC/PrivateSubnet2"
     }
    ],
    "VpcId": {
     "Ref": "ClynicVPC59C07BC0"
    }
   }
  },
  "ClynicVPCPrivateSubnet2RouteTableAssociationD95FF5BF": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "ClynicVPCPrivateSubnet2RouteTableF6C39631"
    },
    "SubnetId": {
     "Ref": "ClynicVPCPrivateSubnet2SubnetE10A628E"
    }
   }
  },
  "ClynicVPCPrivateSubnet2DefaultRoute584F4602": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "NatGatewayId": {
     "Ref": "ClynicVPCPublicSubnet2NATGateway4BCE9852"
    },
    "RouteTableId": {
     "Ref": "ClynicVPCPrivateSubnet2RouteTableF6C39631"
    }
   }
  },
  "ClynicVPCIGW3C687119": {
   "Type": "AWS::EC2::InternetGateway",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "ClynicVPC"
     }
    ]
   }
  },
  "ClynicVPCVPCGW20816574": {
   "Type": "AWS::EC2::VPCGatewayAttachment",
   "Properties": {
    "InternetGatewayId": {
     "Ref": "ClynicVPCIGW3C687119"
    },
    "VpcId": {
     "Ref": "ClynicVPC59C07BC0"
    }
   }
  },
  "ClynicAuthServiceDBSubnetGroup851FC598": {
   "Type": "AWS::RDS::DBSubnetGroup",
   "Properties": {
    "DBSubnetGroupDescription": "Subnet group for ClynicAuthServiceDB database",
    "SubnetIds": [
     {
      "Ref": "ClynicVPCPrivateSubnet1Subnet15B26298"
     },
     {
      "Ref": "ClynicVPCPrivateSubnet2SubnetE10A628E"
     }
    ]
   }
  },
  "ClynicAuthServiceDBSecurityGroup67D7B1FE": {
   "Type": "AWS::EC2::SecurityGroup",
   "Properties": {
    "GroupDescription": "Security group for ClynicAuthServiceDB database",
    "SecurityGroupEgress": [
     {
      "CidrIp": "0.0.0.0/0",
      "Description": "Allow all outbound traffic by default",
      "IpProtocol": "-1"
     }
    ],
    "VpcId": {
     "Ref": "ClynicVPC59C07BC0"
    }
   }
  },
  "localstackClynicAuthServiceDBSecret784B5DAA3fdaad7efa858a3daf9490cf0a702aeb": {
   "Type": "AWS::SecretsManager::Secret",
   "Properties": {
    "Description": {
     "Fn::Join": [
      "",
      [
       "Generated by the CDK for stack: ",
       {
        "Ref": "AWS::StackName"
       }
      ]
     ]
    },
    "GenerateSecretString": {
     "ExcludeCharacters": " %+~`#$&*()|[]{}:;<>?!'/@\"\\",
     "GenerateStringKey": "password",
     "PasswordLength": 30,
     "SecretStringTemplate": "{\"username\":\"admin_user\"}"
    }
   },
   "UpdateReplacePolicy": "Delete",
   "DeletionPolicy": "Delete"
  },
  "ClynicAuthServiceDBSecretAttachment5289C2F8": {
   "Type": "AWS::SecretsManager::SecretTargetAttachment",
   "Properties": {
    "SecretId": {
     "Ref": "localstackClynicAuthServiceDBSecret784B5DAA3fdaad7efa858a3daf9490cf0a702aeb"
    },
    "TargetId": {
     "Ref": "ClynicAuthServiceDB4AC1CAB6"
    },
    "TargetType": "AWS::RDS::DBInstance"
   }
  },
  "ClynicAuthServiceDB4AC1CAB6": {
   "Type": "AWS::RDS::DBInstance",
   "Properties": {
    "AllocatedStorage": "20",
    "CopyTagsToSnapshot": true,
    "DBInstanceClass": "db.t2.micro",
    "DBName": "clynic-auth-service-db",
    "DBSubnetGroupName": {
     "Ref": "ClynicAuthServiceDBSubnetGroup851FC598"
    },
    "Engine": "postgres",
    "EngineVersion": "16.2",
    "MasterUserPassword": {
     "Fn::Join": [
      "",
      [
       "{{resolve:secretsmanager:",
       {
        "Ref": "localstackClynicAuthServiceDBSecret784B5DAA3fdaad7efa858a3daf9490cf0a702aeb"
       },
       ":SecretString:password::}}"
      ]
     ]
    },
    "MasterUsername": "admin_user",
    "StorageType": "gp2",
    "VPCSecurityGroups": [
     {
      "Fn::GetAtt": [
       "ClynicAuthServiceDBSecurityGroup67D7B1FE",
       "GroupId"
      ]
     }
    ]
   },
   "UpdateReplacePolicy": "Delete",
   "DeletionPolicy": "Delete"
  },
  "ClynicServiceDBSubnetGroup0A9C117F": {
   "Type": "AWS::RDS::DBSubnetGroup",
   "Properties": {
    "DBSubnetGroupDescription": "Subnet group for ClynicServiceDB database",
    "SubnetIds": [
     {
      "Ref": "ClynicVPCPrivateSubnet1Subnet15B26298"
     },
     {
      "Ref": "ClynicVPCPrivateSubnet2SubnetE10A628E"
     }
    ]
   }
  },
  "ClynicServiceDBSecurityGroup14AA4CF5": {
   "Type": "AWS::EC2::SecurityGroup",
   "Properties": {
    "GroupDescription": "Security group for ClynicServiceDB database",
    "SecurityGroupEgress": [
     {
      "CidrIp": "0.0.0.0/0",
      "Description": "Allow all outbound traffic by default",
      "IpProtocol": "-1"
     }
    ],
    "VpcId": {
     "Ref": "ClynicVPC59C07BC0"
    }
   }
  },
  "localstackClynicServiceDBSecret21484A363fdaad7efa858a3daf9490cf0a702aeb": {
   "Type": "AWS::SecretsManager::Secret",
   "Properties": {
    "Description": {
     "Fn::Join": [
      "",
      [
       "Generated by the CDK for stack: ",
       {
        "Ref": "AWS::StackName"
       }
      ]
     ]
    },
    "GenerateSecretString": {
     "ExcludeCharacters": " %+~`#$&*()|[]{}:;<>?!'/@\"\\",
     "GenerateStringKey": "password",
     "PasswordLength": 30,
     "SecretStringTemplate": "{\"username\":\"admin_user\"}"
    }
   },
   "UpdateReplacePolicy": "Delete",
   "DeletionPolicy": "Delete"
  },
  "ClynicServiceDBSecretAttachment0734FD68": {
   "Type": "AWS::SecretsManager::SecretTargetAttachment",
   "Properties": {
    "SecretId": {
     "Ref": "localstackClynicServiceDBSecret21484A363fdaad7efa858a3daf9490cf0a702aeb"
    },
    "TargetId": {
     "Ref": "ClynicServiceDBC472171E"
    },
    "TargetType": "AWS::RDS::DBInstance"
   }
  },
  "ClynicServiceDBC472171E": {
   "Type": "AWS::RDS::DBInstance",
   "Properties": {
    "AllocatedStorage": "20",
    "CopyTagsToSnapshot": true,
    "DBInstanceClass": "db.t2.micro",
    "DBName": "clynic-service-db",
    "DBSubnetGroupName": {
     "Ref": "ClynicServiceDBSubnetGroup0A9C117F"
    },
    "Engine": "postgres",
    "EngineVersion": "16.2",
    "MasterUserPassword": {
     "Fn::Join": [
      "",
      [
       "{{resolve:secretsmanager:",
       {
        "Ref": "localstackClynicServiceDBSecret21484A363fdaad7efa858a3daf9490cf0a702aeb"
       },
       ":SecretString:password::}}"
      ]
     ]
    },
    "MasterUsername": "admin_user",
    "StorageType": "gp2",
    "VPCSecurityGroups": [
     {
      "Fn::GetAtt": [
       "ClynicServiceDBSecurityGroup14AA4CF5",
       "GroupId"
      ]
     }
    ]
   },
   "UpdateReplacePolicy": "Delete",
   "DeletionPolicy": "Delete"
  },
  "ClynicAuthServiceDBHealthCheck": {
   "Type": "AWS::Route53::HealthCheck",
   "Properties": {
    "HealthCheckConfig": {
     "FailureThreshold": 3,
     "IPAddress": {
      "Fn::GetAtt": [
       "ClynicAuthServiceDB4AC1CAB6",
       "Endpoint.Address"
      ]
     },
     "Port": {
      "Fn::GetAtt": [
       "ClynicAuthServiceDB4AC1CAB6",
       "Endpoint.Port"
      ]
     },
     "RequestInterval": 30,
     "Type": "TCP"
    }
   }
  },
  "ClynicServiceDBHealthCheck": {
   "Type": "AWS::Route53::HealthCheck",
   "Properties": {
    "HealthCheckConfig": {
     "FailureThreshold": 3,
     "IPAddress": {
      "Fn::GetAtt": [
       "ClynicServiceDBC472171E",
       "Endpoint.Address"
      ]
     },
     "Port": {
      "Fn::GetAtt": [
       "ClynicServiceDBC472171E",
       "Endpoint.Port"
      ]
     },
     "RequestInterval": 30,
     "Type": "TCP"
    }
   }
  },
  "MskCluster": {
   "Type": "AWS::MSK::Cluster",
   "Properties": {
    "BrokerNodeGroupInfo": {
     "BrokerAZDistribution": "DEFAULT",
     "ClientSubnets": [
      {
       "Ref": "ClynicVPCPrivateSubnet1Subnet15B26298"
      },
      {
       "Ref": "ClynicVPCPrivateSubnet2SubnetE10A628E"
      }
     ],
     "InstanceType": "kafka.m5.xlarge"
    },
    "ClusterName": "kafka-cluster",
    "KafkaVersion": "2.8.0",
    "NumberOfBrokerNodes": 1
   }
  },
  "ClynicServiceCluster09D4548A": {
   "Type": "AWS::ECS::Cluster"
  },
  "ClynicServiceClusterDefaultServiceDiscoveryNamespaceB97B0A1F": {
   "Type": "AWS::ServiceDiscovery::PrivateDnsNamespace",
   "Properties": {
    "Name": "clynic-service.local",
    "Vpc": {
     "Ref": "ClynicVPC59C07BC0"
    }
   }
  },
  "ClynicAuthServiceTaskTaskRole3F5C9C6C": {
   "Type": "AWS::IAM::Role",
   "Properties": {
    "AssumeRolePolicyDocument": {
     "Statement": [
      {
       "Action": "sts:AssumeRole",
       "Effect": "Allow",
       "Principal": {
        "Service": "ecs-tasks.amazonaws.com"
       }
      }
     ],
     "Version": "2012-10-17"
    }
   }
  },
  "ClynicAuthServiceTaskA5F48FBA": {
   "Type": "AWS::ECS::TaskDefinition",
   "Properties": {
    "ContainerDefinitions": [
     {
      "Environment": [
       {
        "Name": "SPRING_SQL_INIT_MODE",
        "Value": "always"
       },
       {
        "Name": "JWT_SECRET",
        "Value": "b82991438eaca31a7d19359b3a5295f69353404493e6555e438cd20036b4beab79c7406ea1853e368ffd0315db77603603ed08a2d86d196d4228f4b0267aae70ebf568a54df9f54fc48181a4559ab159ebca318258ad595f2802dff038801f6dd7208a63699d961fe1aac3f8bebf47c37b27374c524b7d14d65a4f50e35be3e27decfdcfa8176333a4959994ccfb89a01bb210939c73152dbdb6902cc596b0e285db4b962b8fcdf44d2b6f2c565e8290c9cedce16a2cc086def81e25b890edd844ec884478a2522038b55a2ed64e07cec5a065518880196e6f5ab4fc8ab14eb5121a816fe04e6378b8f07b54014188eca9 [...]
       },
       {
        "Name": "SPRING_DATASOURCE_URL",
        "Value": {
         "Fn::Join": [
          "",
          [
           "jdbc:postgres://",
           {
            "Fn::GetAtt": [
             "ClynicAuthServiceDB4AC1CAB6",
             "Endpoint.Address"
            ]
           },
           ":",
           {
            "Fn::GetAtt": [
             "ClynicAuthServiceDB4AC1CAB6",
             "Endpoint.Port"
            ]
           },
           "/clynic-auth-service-db"
          ]
         ]
        }
       },
       {
        "Name": "SPRING_DATASOURCE_PASSWORD",
        "Value": {
         "Fn::Join": [
          "",
          [
           "{{resolve:secretsmanager:",
           {
            "Ref": "ClynicAuthServiceDBSecretAttachment5289C2F8"
           },
           ":SecretString:password::}}"
          ]
         ]
        }
       },
       {
        "Name": "SPRING_JPA_HIBERNATE_DDL_AUTO",
        "Value": "update"
       },
       {
        "Name": "SPRING_DATASOURCE_HIKARI_INITIALIZATION_FAIL_TIMEOUT",
        "Value": "60000"
       },
       {
        "Name": "SPRING_DATASOURCE_USERNAME",
        "Value": "admin_user"
       },
       {
        "Name": "SPRING_KAFKA_BOOTSTRAP_SERVERS",
        "Value": "localhost.localstack.cloud:4510, localhost.localstack.cloud:4511, localhost.localstack.cloud:4512"
       }
      ],
      "Essential": true,
      "Image": "clynic-auth-service",
      "LogConfiguration": {
       "LogDriver": "awslogs",
       "Options": {
        "awslogs-group": {
         "Ref": "ClynicAuthServiceLogGroupF9612657"
        },
        "awslogs-stream-prefix": "clynic-auth-service",
        "awslogs-region": {
         "Ref": "AWS::Region"
        }
       }
      },
      "Name": "clynic-auth-serviceContainer",
      "PortMappings": [
       {
        "ContainerPort": 4005,
        "HostPort": 4005,
        "Protocol": "tcp"
       }
      ]
     }
    ],
    "Cpu": "256",
    "ExecutionRoleArn": {
     "Fn::GetAtt": [
      "ClynicAuthServiceTaskExecutionRoleF99EF657",
      "Arn"
     ]
    },
    "Family": "localstackClynicAuthServiceTaskFD4DB3C9",
    "Memory": "512",
    "NetworkMode": "awsvpc",
    "RequiresCompatibilities": [
     "FARGATE"
    ],
    "TaskRoleArn": {
     "Fn::GetAtt": [
      "ClynicAuthServiceTaskTaskRole3F5C9C6C",
      "Arn"
     ]
    }
   }
  },
  "ClynicAuthServiceTaskExecutionRoleF99EF657": {
   "Type": "AWS::IAM::Role",
   "Properties": {
    "AssumeRolePolicyDocument": {
     "Statement": [
      {
       "Action": "sts:AssumeRole",
       "Effect": "Allow",
       "Principal": {
        "Service": "ecs-tasks.amazonaws.com"
       }
      }
     ],
     "Version": "2012-10-17"
    }
   }
  },
  "ClynicAuthServiceTaskExecutionRoleDefaultPolicyCD97A617": {
   "Type": "AWS::IAM::Policy",
   "Properties": {
    "PolicyDocument": {
     "Statement": [
      {
       "Action": [
        "logs:CreateLogStream",
        "logs:PutLogEvents"
       ],
       "Effect": "Allow",
       "Resource": {
        "Fn::GetAtt": [
         "ClynicAuthServiceLogGroupF9612657",
         "Arn"
        ]
       }
      }
     ],
     "Version": "2012-10-17"
    },
    "PolicyName": "ClynicAuthServiceTaskExecutionRoleDefaultPolicyCD97A617",
    "Roles": [
     {
      "Ref": "ClynicAuthServiceTaskExecutionRoleF99EF657"
     }
    ]
   }
  },
  "ClynicAuthServiceLogGroupF9612657": {
   "Type": "AWS::Logs::LogGroup",
   "Properties": {
    "LogGroupName": "/ecs/clynic-auth-service",
    "RetentionInDays": 1
   },
   "UpdateReplacePolicy": "Delete",
   "DeletionPolicy": "Delete"
  },
  "ClynicAuthService8C0FFB8B": {
   "Type": "AWS::ECS::Service",
   "Properties": {
    "Cluster": {
     "Ref": "ClynicServiceCluster09D4548A"
    },
    "DeploymentConfiguration": {
     "Alarms": {
      "AlarmNames": [],
      "Enable": false,
      "Rollback": false
     },
     "MaximumPercent": 200,
     "MinimumHealthyPercent": 50
    },
    "EnableECSManagedTags": false,
    "LaunchType": "FARGATE",
    "NetworkConfiguration": {
     "AwsvpcConfiguration": {
      "AssignPublicIp": "DISABLED",
      "SecurityGroups": [
       {
        "Fn::GetAtt": [
         "ClynicAuthServiceSecurityGroupBCF1636F",
         "GroupId"
        ]
       }
      ],
      "Subnets": [
       {
        "Ref": "ClynicVPCPrivateSubnet1Subnet15B26298"
       },
       {
        "Ref": "ClynicVPCPrivateSubnet2SubnetE10A628E"
       }
      ]
     }
    },
    "ServiceName": "clynic-auth-service",
    "TaskDefinition": {
     "Ref": "ClynicAuthServiceTaskA5F48FBA"
    }
   },
   "DependsOn": [
    "ClynicAuthServiceDB4AC1CAB6",
    "ClynicAuthServiceDBSecretAttachment5289C2F8",
    "localstackClynicAuthServiceDBSecret784B5DAA3fdaad7efa858a3daf9490cf0a702aeb",
    "ClynicAuthServiceDBSecurityGroup67D7B1FE",
    "ClynicAuthServiceDBSubnetGroup851FC598",
    "ClynicAuthServiceDBHealthCheck",
    "ClynicAuthServiceTaskTaskRole3F5C9C6C"
   ]
  },
  "ClynicAuthServiceSecurityGroupBCF1636F": {
   "Type": "AWS::EC2::SecurityGroup",
   "Properties": {
    "GroupDescription": "localstack/ClynicAuthService/SecurityGroup",
    "SecurityGroupEgress": [
     {
      "CidrIp": "0.0.0.0/0",
      "Description": "Allow all outbound traffic by default",
      "IpProtocol": "-1"
     }
    ],
    "VpcId": {
     "Ref": "ClynicVPC59C07BC0"
    }
   },
   "DependsOn": [
    "ClynicAuthServiceDB4AC1CAB6",
    "ClynicAuthServiceDBSecretAttachment5289C2F8",
    "localstackClynicAuthServiceDBSecret784B5DAA3fdaad7efa858a3daf9490cf0a702aeb",
    "ClynicAuthServiceDBSecurityGroup67D7B1FE",
    "ClynicAuthServiceDBSubnetGroup851FC598",
    "ClynicAuthServiceDBHealthCheck",
    "ClynicAuthServiceTaskTaskRole3F5C9C6C"
   ]
  },
  "ClynicBillingServiceTaskTaskRoleCDDF1ACD": {
   "Type": "AWS::IAM::Role",
   "Properties": {
    "AssumeRolePolicyDocument": {
     "Statement": [
      {
       "Action": "sts:AssumeRole",
       "Effect": "Allow",
       "Principal": {
        "Service": "ecs-tasks.amazonaws.com"
       }
      }
     ],
     "Version": "2012-10-17"
    }
   }
  },
  "ClynicBillingServiceTaskB7AA1677": {
   "Type": "AWS::ECS::TaskDefinition",
   "Properties": {
    "ContainerDefinitions": [
     {
      "Environment": [
       {
        "Name": "SPRING_KAFKA_BOOTSTRAP_SERVERS",
        "Value": "localhost.localstack.cloud:4510, localhost.localstack.cloud:4511, localhost.localstack.cloud:4512"
       }
      ],
      "Essential": true,
      "Image": "clynic-billing-service",
      "LogConfiguration": {
       "LogDriver": "awslogs",
       "Options": {
        "awslogs-group": {
         "Ref": "ClynicBillingServiceLogGroup0780D29E"
        },
        "awslogs-stream-prefix": "clynic-billing-service",
        "awslogs-region": {
         "Ref": "AWS::Region"
        }
       }
      },
      "Name": "clynic-billing-serviceContainer",
      "PortMappings": [
       {
        "ContainerPort": 4001,
        "HostPort": 4001,
        "Protocol": "tcp"
       },
       {
        "ContainerPort": 9001,
        "HostPort": 9001,
        "Protocol": "tcp"
       }
      ]
     }
    ],
    "Cpu": "256",
    "ExecutionRoleArn": {
     "Fn::GetAtt": [
      "ClynicBillingServiceTaskExecutionRoleE6B119D6",
      "Arn"
     ]
    },
    "Family": "localstackClynicBillingServiceTask776FC57D",
    "Memory": "512",
    "NetworkMode": "awsvpc",
    "RequiresCompatibilities": [
     "FARGATE"
    ],
    "TaskRoleArn": {
     "Fn::GetAtt": [
      "ClynicBillingServiceTaskTaskRoleCDDF1ACD",
      "Arn"
     ]
    }
   }
  },
  "ClynicBillingServiceTaskExecutionRoleE6B119D6": {
   "Type": "AWS::IAM::Role",
   "Properties": {
    "AssumeRolePolicyDocument": {
     "Statement": [
      {
       "Action": "sts:AssumeRole",
       "Effect": "Allow",
       "Principal": {
        "Service": "ecs-tasks.amazonaws.com"
       }
      }
     ],
     "Version": "2012-10-17"
    }
   }
  },
  "ClynicBillingServiceTaskExecutionRoleDefaultPolicy82686E24": {
   "Type": "AWS::IAM::Policy",
   "Properties": {
    "PolicyDocument": {
     "Statement": [
      {
       "Action": [
        "logs:CreateLogStream",
        "logs:PutLogEvents"
       ],
       "Effect": "Allow",
       "Resource": {
        "Fn::GetAtt": [
         "ClynicBillingServiceLogGroup0780D29E",
         "Arn"
        ]
       }
      }
     ],
     "Version": "2012-10-17"
    },
    "PolicyName": "ClynicBillingServiceTaskExecutionRoleDefaultPolicy82686E24",
    "Roles": [
     {
      "Ref": "ClynicBillingServiceTaskExecutionRoleE6B119D6"
     }
    ]
   }
  },
  "ClynicBillingServiceLogGroup0780D29E": {
   "Type": "AWS::Logs::LogGroup",
   "Properties": {
    "LogGroupName": "/ecs/clynic-billing-service",
    "RetentionInDays": 1
   },
   "UpdateReplacePolicy": "Delete",
   "DeletionPolicy": "Delete"
  },
  "ClynicBillingService01B19077": {
   "Type": "AWS::ECS::Service",
   "Properties": {
    "Cluster": {
     "Ref": "ClynicServiceCluster09D4548A"
    },
    "DeploymentConfiguration": {
     "Alarms": {
      "AlarmNames": [],
      "Enable": false,
      "Rollback": false
     },
     "MaximumPercent": 200,
     "MinimumHealthyPercent": 50
    },
    "EnableECSManagedTags": false,
    "LaunchType": "FARGATE",
    "NetworkConfiguration": {
     "AwsvpcConfiguration": {
      "AssignPublicIp": "DISABLED",
      "SecurityGroups": [
       {
        "Fn::GetAtt": [
         "ClynicBillingServiceSecurityGroup3848ABD8",
         "GroupId"
        ]
       }
      ],
      "Subnets": [
       {
        "Ref": "ClynicVPCPrivateSubnet1Subnet15B26298"
       },
       {
        "Ref": "ClynicVPCPrivateSubnet2SubnetE10A628E"
       }
      ]
     }
    },
    "ServiceName": "clynic-billing-service",
    "TaskDefinition": {
     "Ref": "ClynicBillingServiceTaskB7AA1677"
    }
   },
   "DependsOn": [
    "ClynicBillingServiceTaskTaskRoleCDDF1ACD"
   ]
  },
  "ClynicBillingServiceSecurityGroup3848ABD8": {
   "Type": "AWS::EC2::SecurityGroup",
   "Properties": {
    "GroupDescription": "localstack/ClynicBillingService/SecurityGroup",
    "SecurityGroupEgress": [
     {
      "CidrIp": "0.0.0.0/0",
      "Description": "Allow all outbound traffic by default",
      "IpProtocol": "-1"
     }
    ],
    "VpcId": {
     "Ref": "ClynicVPC59C07BC0"
    }
   },
   "DependsOn": [
    "ClynicBillingServiceTaskTaskRoleCDDF1ACD"
   ]
  },
  "ClynicAnalyticsServiceTaskTaskRole8EC3DBEE": {
   "Type": "AWS::IAM::Role",
   "Properties": {
    "AssumeRolePolicyDocument": {
     "Statement": [
      {
       "Action": "sts:AssumeRole",
       "Effect": "Allow",
       "Principal": {
        "Service": "ecs-tasks.amazonaws.com"
       }
      }
     ],
     "Version": "2012-10-17"
    }
   }
  },
  "ClynicAnalyticsServiceTask335B816B": {
   "Type": "AWS::ECS::TaskDefinition",
   "Properties": {
    "ContainerDefinitions": [
     {
      "Environment": [
       {
        "Name": "SPRING_KAFKA_BOOTSTRAP_SERVERS",
        "Value": "localhost.localstack.cloud:4510, localhost.localstack.cloud:4511, localhost.localstack.cloud:4512"
       }
      ],
      "Essential": true,
      "Image": "clynic-analytics-service",
      "LogConfiguration": {
       "LogDriver": "awslogs",
       "Options": {
        "awslogs-group": {
         "Ref": "ClynicAnalyticsServiceLogGroup7D566D75"
        },
        "awslogs-stream-prefix": "clynic-analytics-service",
        "awslogs-region": {
         "Ref": "AWS::Region"
        }
       }
      },
      "Name": "clynic-analytics-serviceContainer",
      "PortMappings": [
       {
        "ContainerPort": 4002,
        "HostPort": 4002,
        "Protocol": "tcp"
       }
      ]
     }
    ],
    "Cpu": "256",
    "ExecutionRoleArn": {
     "Fn::GetAtt": [
      "ClynicAnalyticsServiceTaskExecutionRole1D78FB2D",
      "Arn"
     ]
    },
    "Family": "localstackClynicAnalyticsServiceTaskACBAD417",
    "Memory": "512",
    "NetworkMode": "awsvpc",
    "RequiresCompatibilities": [
     "FARGATE"
    ],
    "TaskRoleArn": {
     "Fn::GetAtt": [
      "ClynicAnalyticsServiceTaskTaskRole8EC3DBEE",
      "Arn"
     ]
    }
   }
  },
  "ClynicAnalyticsServiceTaskExecutionRole1D78FB2D": {
   "Type": "AWS::IAM::Role",
   "Properties": {
    "AssumeRolePolicyDocument": {
     "Statement": [
      {
       "Action": "sts:AssumeRole",
       "Effect": "Allow",
       "Principal": {
        "Service": "ecs-tasks.amazonaws.com"
       }
      }
     ],
     "Version": "2012-10-17"
    }
   }
  },
  "ClynicAnalyticsServiceTaskExecutionRoleDefaultPolicyAFF4BA84": {
   "Type": "AWS::IAM::Policy",
   "Properties": {
    "PolicyDocument": {
     "Statement": [
      {
       "Action": [
        "logs:CreateLogStream",
        "logs:PutLogEvents"
       ],
       "Effect": "Allow",
       "Resource": {
        "Fn::GetAtt": [
         "ClynicAnalyticsServiceLogGroup7D566D75",
         "Arn"
        ]
       }
      }
     ],
     "Version": "2012-10-17"
    },
    "PolicyName": "ClynicAnalyticsServiceTaskExecutionRoleDefaultPolicyAFF4BA84",
    "Roles": [
     {
      "Ref": "ClynicAnalyticsServiceTaskExecutionRole1D78FB2D"
     }
    ]
   }
  },
  "ClynicAnalyticsServiceLogGroup7D566D75": {
   "Type": "AWS::Logs::LogGroup",
   "Properties": {
    "LogGroupName": "/ecs/clynic-analytics-service",
    "RetentionInDays": 1
   },
   "UpdateReplacePolicy": "Delete",
   "DeletionPolicy": "Delete"
  },
  "ClynicAnalyticsServiceCA8704B3": {
   "Type": "AWS::ECS::Service",
   "Properties": {
    "Cluster": {
     "Ref": "ClynicServiceCluster09D4548A"
    },
    "DeploymentConfiguration": {
     "Alarms": {
      "AlarmNames": [],
      "Enable": false,
      "Rollback": false
     },
     "MaximumPercent": 200,
     "MinimumHealthyPercent": 50
    },
    "EnableECSManagedTags": false,
    "LaunchType": "FARGATE",
    "NetworkConfiguration": {
     "AwsvpcConfiguration": {
      "AssignPublicIp": "DISABLED",
      "SecurityGroups": [
       {
        "Fn::GetAtt": [
         "ClynicAnalyticsServiceSecurityGroup65CB6F66",
         "GroupId"
        ]
       }
      ],
      "Subnets": [
       {
        "Ref": "ClynicVPCPrivateSubnet1Subnet15B26298"
       },
       {
        "Ref": "ClynicVPCPrivateSubnet2SubnetE10A628E"
       }
      ]
     }
    },
    "ServiceName": "clynic-analytics-service",
    "TaskDefinition": {
     "Ref": "ClynicAnalyticsServiceTask335B816B"
    }
   },
   "DependsOn": [
    "ClynicAnalyticsServiceTaskTaskRole8EC3DBEE",
    "MskCluster"
   ]
  },
  "ClynicAnalyticsServiceSecurityGroup65CB6F66": {
   "Type": "AWS::EC2::SecurityGroup",
   "Properties": {
    "GroupDescription": "localstack/ClynicAnalyticsService/SecurityGroup",
    "SecurityGroupEgress": [
     {
      "CidrIp": "0.0.0.0/0",
      "Description": "Allow all outbound traffic by default",
      "IpProtocol": "-1"
     }
    ],
    "VpcId": {
     "Ref": "ClynicVPC59C07BC0"
    }
   },
   "DependsOn": [
    "ClynicAnalyticsServiceTaskTaskRole8EC3DBEE",
    "MskCluster"
   ]
  },
  "ClynicServiceTaskTaskRole56AF335B": {
   "Type": "AWS::IAM::Role",
   "Properties": {
    "AssumeRolePolicyDocument": {
     "Statement": [
      {
       "Action": "sts:AssumeRole",
       "Effect": "Allow",
       "Principal": {
        "Service": "ecs-tasks.amazonaws.com"
       }
      }
     ],
     "Version": "2012-10-17"
    }
   }
  },
  "ClynicServiceTask40AB5293": {
   "Type": "AWS::ECS::TaskDefinition",
   "Properties": {
    "ContainerDefinitions": [
     {
      "Environment": [
       {
        "Name": "BILLING_SERVICE_GRPC_PORT",
        "Value": "9001"
       },
       {
        "Name": "SPRING_SQL_INIT_MODE",
        "Value": "always"
       },
       {
        "Name": "SPRING_DATASOURCE_URL",
        "Value": {
         "Fn::Join": [
          "",
          [
           "jdbc:postgres://",
           {
            "Fn::GetAtt": [
             "ClynicServiceDBC472171E",
             "Endpoint.Address"
            ]
           },
           ":",
           {
            "Fn::GetAtt": [
             "ClynicServiceDBC472171E",
             "Endpoint.Port"
            ]
           },
           "/clynic-service-db"
          ]
         ]
        }
       },
       {
        "Name": "SPRING_DATASOURCE_PASSWORD",
        "Value": {
         "Fn::Join": [
          "",
          [
           "{{resolve:secretsmanager:",
           {
            "Ref": "ClynicServiceDBSecretAttachment0734FD68"
           },
           ":SecretString:password::}}"
          ]
         ]
        }
       },
       {
        "Name": "SPRING_JPA_HIBERNATE_DDL_AUTO",
        "Value": "update"
       },
       {
        "Name": "SPRING_DATASOURCE_HIKARI_INITIALIZATION_FAIL_TIMEOUT",
        "Value": "60000"
       },
       {
        "Name": "SPRING_DATASOURCE_USERNAME",
        "Value": "admin_user"
       },
       {
        "Name": "SPRING_KAFKA_BOOTSTRAP_SERVERS",
        "Value": "localhost.localstack.cloud:4510, localhost.localstack.cloud:4511, localhost.localstack.cloud:4512"
       },
       {
        "Name": "BILLING_SERVICE_ADDRESS",
        "Value": "host.docker.internal"
       }
      ],
      "Essential": true,
      "Image": "clynic-service",
      "LogConfiguration": {
       "LogDriver": "awslogs",
       "Options": {
        "awslogs-group": {
         "Ref": "ClynicServiceLogGroup352C2E67"
        },
        "awslogs-stream-prefix": "clynic-service",
        "awslogs-region": {
         "Ref": "AWS::Region"
        }
       }
      },
      "Name": "clynic-serviceContainer",
      "PortMappings": [
       {
        "ContainerPort": 4000,
        "HostPort": 4000,
        "Protocol": "tcp"
       }
      ]
     }
    ],
    "Cpu": "256",
    "ExecutionRoleArn": {
     "Fn::GetAtt": [
      "ClynicServiceTaskExecutionRole553F8E7A",
      "Arn"
     ]
    },
    "Family": "localstackClynicServiceTaskA2B2CEC7",
    "Memory": "512",
    "NetworkMode": "awsvpc",
    "RequiresCompatibilities": [
     "FARGATE"
    ],
    "TaskRoleArn": {
     "Fn::GetAtt": [
      "ClynicServiceTaskTaskRole56AF335B",
      "Arn"
     ]
    }
   }
  },
  "ClynicServiceTaskExecutionRole553F8E7A": {
   "Type": "AWS::IAM::Role",
   "Properties": {
    "AssumeRolePolicyDocument": {
     "Statement": [
      {
       "Action": "sts:AssumeRole",
       "Effect": "Allow",
       "Principal": {
        "Service": "ecs-tasks.amazonaws.com"
       }
      }
     ],
     "Version": "2012-10-17"
    }
   }
  },
  "ClynicServiceTaskExecutionRoleDefaultPolicy19DC38F2": {
   "Type": "AWS::IAM::Policy",
   "Properties": {
    "PolicyDocument": {
     "Statement": [
      {
       "Action": [
        "logs:CreateLogStream",
        "logs:PutLogEvents"
       ],
       "Effect": "Allow",
       "Resource": {
        "Fn::GetAtt": [
         "ClynicServiceLogGroup352C2E67",
         "Arn"
        ]
       }
      }
     ],
     "Version": "2012-10-17"
    },
    "PolicyName": "ClynicServiceTaskExecutionRoleDefaultPolicy19DC38F2",
    "Roles": [
     {
      "Ref": "ClynicServiceTaskExecutionRole553F8E7A"
     }
    ]
   }
  },
  "ClynicServiceLogGroup352C2E67": {
   "Type": "AWS::Logs::LogGroup",
   "Properties": {
    "LogGroupName": "/ecs/clynic-service",
    "RetentionInDays": 1
   },
   "UpdateReplacePolicy": "Delete",
   "DeletionPolicy": "Delete"
  },
  "ClynicService16D85825": {
   "Type": "AWS::ECS::Service",
   "Properties": {
    "Cluster": {
     "Ref": "ClynicServiceCluster09D4548A"
    },
    "DeploymentConfiguration": {
     "Alarms": {
      "AlarmNames": [],
      "Enable": false,
      "Rollback": false
     },
     "MaximumPercent": 200,
     "MinimumHealthyPercent": 50
    },
    "EnableECSManagedTags": false,
    "LaunchType": "FARGATE",
    "NetworkConfiguration": {
     "AwsvpcConfiguration": {
      "AssignPublicIp": "DISABLED",
      "SecurityGroups": [
       {
        "Fn::GetAtt": [
         "ClynicServiceSecurityGroup64A38553",
         "GroupId"
        ]
       }
      ],
      "Subnets": [
       {
        "Ref": "ClynicVPCPrivateSubnet1Subnet15B26298"
       },
       {
        "Ref": "ClynicVPCPrivateSubnet2SubnetE10A628E"
       }
      ]
     }
    },
    "ServiceName": "clynic-service",
    "TaskDefinition": {
     "Ref": "ClynicServiceTask40AB5293"
    }
   },
   "DependsOn": [
    "ClynicBillingServiceSecurityGroup3848ABD8",
    "ClynicBillingService01B19077",
    "ClynicServiceDBC472171E",
    "ClynicServiceDBSecretAttachment0734FD68",
    "localstackClynicServiceDBSecret21484A363fdaad7efa858a3daf9490cf0a702aeb",
    "ClynicServiceDBSecurityGroup14AA4CF5",
    "ClynicServiceDBSubnetGroup0A9C117F",
    "ClynicServiceDBHealthCheck",
    "ClynicServiceTaskTaskRole56AF335B",
    "MskCluster"
   ]
  },
  "ClynicServiceSecurityGroup64A38553": {
   "Type": "AWS::EC2::SecurityGroup",
   "Properties": {
    "GroupDescription": "localstack/ClynicService/SecurityGroup",
    "SecurityGroupEgress": [
     {
      "CidrIp": "0.0.0.0/0",
      "Description": "Allow all outbound traffic by default",
      "IpProtocol": "-1"
     }
    ],
    "VpcId": {
     "Ref": "ClynicVPC59C07BC0"
    }
   },
   "DependsOn": [
    "ClynicBillingServiceSecurityGroup3848ABD8",
    "ClynicBillingService01B19077",
    "ClynicServiceDBC472171E",
    "ClynicServiceDBSecretAttachment0734FD68",
    "localstackClynicServiceDBSecret21484A363fdaad7efa858a3daf9490cf0a702aeb",
    "ClynicServiceDBSecurityGroup14AA4CF5",
    "ClynicServiceDBSubnetGroup0A9C117F",
    "ClynicServiceDBHealthCheck",
    "ClynicServiceTaskTaskRole56AF335B",
    "MskCluster"
   ]
  },
  "APIGatewayTaskDefinitionTaskRole894A199F": {
   "Type": "AWS::IAM::Role",
   "Properties": {
    "AssumeRolePolicyDocument": {
     "Statement": [
      {
       "Action": "sts:AssumeRole",
       "Effect": "Allow",
       "Principal": {
        "Service": "ecs-tasks.amazonaws.com"
       }
      }
     ],
     "Version": "2012-10-17"
    }
   }
  },
  "APIGatewayTaskDefinition199BB1B7": {
   "Type": "AWS::ECS::TaskDefinition",
   "Properties": {
    "ContainerDefinitions": [
     {
      "Environment": [
       {
        "Name": "AUTH_SERVICE_URL",
        "Value": "http://host.docker.internal:4005"
       },
       {
        "Name": "SPRING_PROFILES_ACTIVE",
        "Value": "prod"
       }
      ],
      "Essential": true,
      "Image": "api-gateway",
      "LogConfiguration": {
       "LogDriver": "awslogs",
       "Options": {
        "awslogs-group": {
         "Ref": "APIGatewayLogGroupCDBB0658"
        },
        "awslogs-stream-prefix": "api-gateway",
        "awslogs-region": {
         "Ref": "AWS::Region"
        }
       }
      },
      "Name": "APIGatewayContainer",
      "PortMappings": [
       {
        "ContainerPort": 4004,
        "HostPort": 4004,
        "Protocol": "tcp"
       }
      ]
     }
    ],
    "Cpu": "256",
    "ExecutionRoleArn": {
     "Fn::GetAtt": [
      "APIGatewayTaskDefinitionExecutionRole555CBA21",
      "Arn"
     ]
    },
    "Family": "localstackAPIGatewayTaskDefinitionF109B4B7",
    "Memory": "512",
    "NetworkMode": "awsvpc",
    "RequiresCompatibilities": [
     "FARGATE"
    ],
    "TaskRoleArn": {
     "Fn::GetAtt": [
      "APIGatewayTaskDefinitionTaskRole894A199F",
      "Arn"
     ]
    }
   }
  },
  "APIGatewayTaskDefinitionExecutionRole555CBA21": {
   "Type": "AWS::IAM::Role",
   "Properties": {
    "AssumeRolePolicyDocument": {
     "Statement": [
      {
       "Action": "sts:AssumeRole",
       "Effect": "Allow",
       "Principal": {
        "Service": "ecs-tasks.amazonaws.com"
       }
      }
     ],
     "Version": "2012-10-17"
    }
   }
  },
  "APIGatewayTaskDefinitionExecutionRoleDefaultPolicy582C1C35": {
   "Type": "AWS::IAM::Policy",
   "Properties": {
    "PolicyDocument": {
     "Statement": [
      {
       "Action": [
        "logs:CreateLogStream",
        "logs:PutLogEvents"
       ],
       "Effect": "Allow",
       "Resource": {
        "Fn::GetAtt": [
         "APIGatewayLogGroupCDBB0658",
         "Arn"
        ]
       }
      }
     ],
     "Version": "2012-10-17"
    },
    "PolicyName": "APIGatewayTaskDefinitionExecutionRoleDefaultPolicy582C1C35",
    "Roles": [
     {
      "Ref": "APIGatewayTaskDefinitionExecutionRole555CBA21"
     }
    ]
   }
  },
  "APIGatewayLogGroupCDBB0658": {
   "Type": "AWS::Logs::LogGroup",
   "Properties": {
    "LogGroupName": "/ecs/api-gateway",
    "RetentionInDays": 1
   },
   "UpdateReplacePolicy": "Delete",
   "DeletionPolicy": "Delete"
  },
  "APIGatewayServiceLBDA2B7609": {
   "Type": "AWS::ElasticLoadBalancingV2::LoadBalancer",
   "Properties": {
    "LoadBalancerAttributes": [
     {
      "Key": "deletion_protection.enabled",
      "Value": "false"
     }
    ],
    "Scheme": "internet-facing",
    "SecurityGroups": [
     {
      "Fn::GetAtt": [
       "APIGatewayServiceLBSecurityGroup8524BFD1",
       "GroupId"
      ]
     }
    ],
    "Subnets": [
     {
      "Ref": "ClynicVPCPublicSubnet1SubnetB6FCDF2D"
     },
     {
      "Ref": "ClynicVPCPublicSubnet2Subnet78C3FE18"
     }
    ],
    "Type": "application"
   },
   "DependsOn": [
    "ClynicVPCPublicSubnet1DefaultRouteA2DADBF6",
    "ClynicVPCPublicSubnet1RouteTableAssociationB121591F",
    "ClynicVPCPublicSubnet2DefaultRouteBCF326A3",
    "ClynicVPCPublicSubnet2RouteTableAssociation57C9C32D"
   ]
  },
  "APIGatewayServiceLBSecurityGroup8524BFD1": {
   "Type": "AWS::EC2::SecurityGroup",
   "Properties": {
    "GroupDescription": "Automatically created Security Group for ELB localstackAPIGatewayServiceLB0192615A",
    "SecurityGroupIngress": [
     {
      "CidrIp": "0.0.0.0/0",
      "Description": "Allow from anyone on port 80",
      "FromPort": 80,
      "IpProtocol": "tcp",
      "ToPort": 80
     }
    ],
    "VpcId": {
     "Ref": "ClynicVPC59C07BC0"
    }
   }
  },
  "APIGatewayServiceLBSecurityGrouptolocalstackAPIGatewayServiceSecurityGroup37054EEE4004CAF8FB32": {
   "Type": "AWS::EC2::SecurityGroupEgress",
   "Properties": {
    "Description": "Load balancer to target",
    "DestinationSecurityGroupId": {
     "Fn::GetAtt": [
      "APIGatewayServiceSecurityGroup98F3B93B",
      "GroupId"
     ]
    },
    "FromPort": 4004,
    "GroupId": {
     "Fn::GetAtt": [
      "APIGatewayServiceLBSecurityGroup8524BFD1",
      "GroupId"
     ]
    },
    "IpProtocol": "tcp",
    "ToPort": 4004
   }
  },
  "APIGatewayServiceLBPublicListenerD6FA7F47": {
   "Type": "AWS::ElasticLoadBalancingV2::Listener",
   "Properties": {
    "DefaultActions": [
     {
      "TargetGroupArn": {
       "Ref": "APIGatewayServiceLBPublicListenerECSGroupF9D8CC70"
      },
      "Type": "forward"
     }
    ],
    "LoadBalancerArn": {
     "Ref": "APIGatewayServiceLBDA2B7609"
    },
    "Port": 80,
    "Protocol": "HTTP"
   }
  },
  "APIGatewayServiceLBPublicListenerECSGroupF9D8CC70": {
   "Type": "AWS::ElasticLoadBalancingV2::TargetGroup",
   "Properties": {
    "Port": 80,
    "Protocol": "HTTP",
    "TargetGroupAttributes": [
     {
      "Key": "stickiness.enabled",
      "Value": "false"
     }
    ],
    "TargetType": "ip",
    "VpcId": {
     "Ref": "ClynicVPC59C07BC0"
    }
   }
  },
  "APIGatewayServiceA5206149": {
   "Type": "AWS::ECS::Service",
   "Properties": {
    "Cluster": {
     "Ref": "ClynicServiceCluster09D4548A"
    },
    "DeploymentConfiguration": {
     "Alarms": {
      "AlarmNames": [],
      "Enable": false,
      "Rollback": false
     },
     "MaximumPercent": 200,
     "MinimumHealthyPercent": 50
    },
    "DesiredCount": 1,
    "EnableECSManagedTags": false,
    "HealthCheckGracePeriodSeconds": 60,
    "LaunchType": "FARGATE",
    "LoadBalancers": [
     {
      "ContainerName": "APIGatewayContainer",
      "ContainerPort": 4004,
      "TargetGroupArn": {
       "Ref": "APIGatewayServiceLBPublicListenerECSGroupF9D8CC70"
      }
     }
    ],
    "NetworkConfiguration": {
     "AwsvpcConfiguration": {
      "AssignPublicIp": "DISABLED",
      "SecurityGroups": [
       {
        "Fn::GetAtt": [
         "APIGatewayServiceSecurityGroup98F3B93B",
         "GroupId"
        ]
       }
      ],
      "Subnets": [
       {
        "Ref": "ClynicVPCPrivateSubnet1Subnet15B26298"
       },
       {
        "Ref": "ClynicVPCPrivateSubnet2SubnetE10A628E"
       }
      ]
     }
    },
    "ServiceName": "api-gateway",
    "TaskDefinition": {
     "Ref": "APIGatewayTaskDefinition199BB1B7"
    }
   },
   "DependsOn": [
    "APIGatewayServiceLBPublicListenerECSGroupF9D8CC70",
    "APIGatewayServiceLBPublicListenerD6FA7F47",
    "APIGatewayTaskDefinitionTaskRole894A199F"
   ]
  },
  "APIGatewayServiceSecurityGroup98F3B93B": {
   "Type": "AWS::EC2::SecurityGroup",
   "Properties": {
    "GroupDescription": "localstack/APIGatewayService/Service/SecurityGroup",
    "SecurityGroupEgress": [
     {
      "CidrIp": "0.0.0.0/0",
      "Description": "Allow all outbound traffic by default",
      "IpProtocol": "-1"
     }
    ],
    "VpcId": {
     "Ref": "ClynicVPC59C07BC0"
    }
   },
   "DependsOn": [
    "APIGatewayTaskDefinitionTaskRole894A199F"
   ]
  },
  "APIGatewayServiceSecurityGroupfromlocalstackAPIGatewayServiceLBSecurityGroup32B4CA424004CA85E4CD": {
   "Type": "AWS::EC2::SecurityGroupIngress",
   "Properties": {
    "Description": "Load balancer to target",
    "FromPort": 4004,
    "GroupId": {
     "Fn::GetAtt": [
      "APIGatewayServiceSecurityGroup98F3B93B",
      "GroupId"
     ]
    },
    "IpProtocol": "tcp",
    "SourceSecurityGroupId": {
     "Fn::GetAtt": [
      "APIGatewayServiceLBSecurityGroup8524BFD1",
      "GroupId"
     ]
    },
    "ToPort": 4004
   },
   "DependsOn": [
    "APIGatewayTaskDefinitionTaskRole894A199F"
   ]
  }
 },
 "Outputs": {
  "APIGatewayServiceLoadBalancerDNS7C7318A3": {
   "Value": {
    "Fn::GetAtt": [
     "APIGatewayServiceLBDA2B7609",
     "DNSName"
    ]
   }
  },
  "APIGatewayServiceServiceURL95056890": {
   "Value": {
    "Fn::Join": [
     "",
     [
      "http://",
      {
       "Fn::GetAtt": [
        "APIGatewayServiceLBDA2B7609",
        "DNSName"
       ]
      }
     ]
    ]
   }
  }
 }
}
